# invite

./: .gitignore  404.html  Cargo.toml  Dioxus.toml  index.html  main.css  map.js  snowflake.js
.github/workflows/: publish.yaml
assets/: main-07c9adcada9dd5b7.css  main-0e30448afa46ba67.css  main-3845a942de0cef3c.css  main-3d201959cb3622a9.css  main-5f5f273660a0e85b.css  main-a0cdbefbda461ec6.css  main-a66e0572b984373a.css  main.css  map-1f02c863e3108006.js  map-67e504672aaac738.js  map.js  snowflake-82b0021a6c0835d3.js  snowflake.js
assets/dioxus/: invite.js  invite.js.br  invite_bg.wasm  invite_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
src/: components.rs  main.rs
src/components/: app.rs  card.rs  entrance.rs  login.rs
wasm/: invite.js  invite.js.br  invite_bg.wasm  invite_bg.wasm.br
wasm/snippets/dioxus-interpreter-js-161bb2cc5b21a4da/: inline0.js  inline0.js.br
