[package]
name = "invite"
version = "0.1.0"
authors = ["greg-prk <greg.prk@kakaocorp.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.6", features = ["web"] }
dioxus-sdk = { version = "0.6", features = ["storage"]}

# Debug
dioxus-logger = "0.6"
manganis = "0.2.2"
chrono = "0.4.39"
chrono-tz = "0.10.0"
tracing = "0.1.41"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
